# customers-churn-prediction-system

./: README.md
backend/: customer_churn_prediction.db  main.py  pyproject.toml  server.py
backend/src/: ai_prediction.py  auth.py  main.py
backend/src/AI_models/: logistic_model.pkl  scaler.pkl
backend/src/database/: db.py  models.py
backend/src/routes/: authentication.py  customer_churn_predict.py  models_predict.py  token.py
backend/src/test/: test_database.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/components/: Contact.jsx  Footer.jsx  Header.jsx  Home.jsx  Layout.jsx  LoginForm.jsx  Prediction.jsx  RegisterForm.jsx
frontend/src/context/: Authcontex.js
